# mycode

./: README.md
gtest_qtest/: CMakeLists.txt  PanelItem.cpp  PanelItem.h  main.cpp
gtest_qtest/ut/: CMakeLists.txt  cover.sh  main.cpp  qtut.cpp  qtut.h
gtestdemo/: CMakeLists.txt  main.cpp
gtestdemo/include/: A.h
gtestdemo/src/: A.cpp
gtestdemo/ut/: Aut.cpp  Aut.h  CMakeLists.txt
qtpro2cmake/: CMakeLists.txt  about.cpp  about.h  about.ui  editer.pro  fileEditer.cpp  fileEditer.h  fileEditer.ui  imgs.qrc  main.cpp
